# js-oo

./: .gitignore  Gemfile  build.gradle  local.properties.sample  package.json  settings.gradle
Scripts/: ButtonController.js  CameraMirror.js  DrumsButtonsController.js  GuitarInputDetector.js  GuitarReceiver.js  GuitarShowMode.js  MirrorCameraButton.js  NoChildDestroyer.js  NoteCamera.js  NoteCameraNew.js  ObjectMover.js  ShortcutMenu.js
Standard Assets/Scripts/Audio/: SoundEngine.cs
Standard Assets/Scripts/Band/: BandNetworkController.cs
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/assets/stylesheets/: custom.scss
app/controllers/: articles_controller.rb
app/models/: article.rb
app/src/androidTest/java/com/example/noiseunseen/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/lzanol/chords/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: PlayAudioEngine.cpp  PlayAudioEngine.h  SamplesManager.cpp  SamplesManager.h  jni_bridge.cpp  native-lib.cpp
app/src/main/java/com/example/noiseunseen/: MainActivity.kt
app/src/main/java/com/lzanol/chords/activities/: MainActivity.kt  PlayActivity.kt
app/src/main/java/com/lzanol/chords/audio/: Patch.kt  PatchReader.kt  PlaybackEngine.kt  SamplesManager.kt  Sound.kt  SoundBankManager.kt  SoundBankReader.kt
app/src/main/res/drawable/: progress_bar.xml
app/src/main/res/layout/: activity_main.xml  activity_play.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/noiseunseen/: ExampleUnitTest.kt
app/src/test/java/com/lzanol/chords/: ExampleUnitTest.kt
app/views/articles/: _form.html.erb  edit.html.erb  index.html.erb  new.html.erb  show.html.erb
app/views/layouts/: _navigation.html.erb  application.html.erb
audio-device/: build.gradle
config/: application.rb  cable.yml  credentials.yml.enc
config/environments/: production.rb
db/: schema.rb
db/migrate/: 20201216200006_create_articles.rb
docs/: Virtual Instrument.txt
gradle/wrapper/: gradle-wrapper.properties
tools/csb-builder/: main.d
(+41 files in other folders)
